--- a/detail.html
+++ b/detail.html
@@ -15,6 +15,9 @@
         <h2 id="role"></h2>
         
         <div class="content-body">
+            <h3>General Overview</h3>
+            <div id="general_overview"></div>
+            
             <h3>Job Description</h3>
 
             <h4>Tasks</h4>
